Refine the multi_block test case to ensure it builds correctly

--- a/tests/testcases/multi_block.rdl
+++ b/tests/testcases/multi_block.rdl
@@ -1,4 +1,4 @@
-addrmap multiblock {
+addrmap multi_block {
 
     block_a__block_a_mmap__block_a block_a;
     block_b__block_b_mmap__block_b block_b;
