--- a/src/peakrdl_python/templates/addrmap_field.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_field.py.jinja
@@ -90,7 +90,13 @@ class {{get_fully_qualified_type_name(node)}}_cls(Field{%- if 'encode' in node.l
         int_default = super().default
 
         if int_default is not None:
-            return {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node)}}_enumcls(int_default)
+            if int_default in self._enum_values:
+                return {{get_fully_qualified_enum_type(node.get_property('encode'), top_node.parent, node)}}_enumcls(int_default)
+            else:
+                msg = f'reset value {int_default:d} is not within the enumeration for the class'
+                self._logger.warn(msg)
+                warnings.warn(msg)
+                return None
 
         return None
     {% endif %}
