--- a/src/peakrdl_python/templates/addrmap_register.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_register.py.jinja
@@ -155,20 +155,9 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Reg{% if asyncoutput %}A
     """
     __slots__: List[str] = []
 
-    def __init__(self, logger_handle: str, inst_name: str,
-                 parent: Union[RegFile, AddressMap, Memory],
-                 address: int,
-                 length: int,
-                 stride: int,
-                 callbacks: {% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}):
-
-
-        elements = tuple([{{get_fully_qualified_type_name(node)}}_cls(callbacks=callbacks,address=address+(index * stride),
-                          logger_handle=f'{logger_handle}.{inst_name}[{index:d}]',
-                          inst_name=f'{inst_name}[{index:d}]', parent=parent) for index in range(length)])
-
-        super().__init__(logger_handle=logger_handle, inst_name=inst_name,
-                         parent=parent, elements=elements)
+    @property
+    def _element_datatype(self) -> Type[Node]:
+        return {{get_fully_qualified_type_name(node)}}_cls
 
     def __getitem__(self, item:Union[int, slice]) -> Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]]:
         # this cast is OK because an explict typing check was done in the __init__
