--- a/src/peakrdl_python/templates/addrmap_tb.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_tb.py.jinja
@@ -47,9 +47,21 @@ class {{fq_block_name}}_single_access({{top_node.type_name}}_TestCase): # type: 
         """
         {% for node in owned_elements.nodes -%}
         with self.subTest(msg='node: {{'.'.join(node.get_path_segments())}}'):
-            self.assertEqual(self.dut.{{'.'.join(get_python_path_segments(node))}}.inst_name, '{{node.get_path_segments()[-1]}}') # type: ignore[union-attr]
+            self.assertEqual(self.dut.{{'.'.join(get_python_path_segments(node, False))}}.inst_name, '{{node.get_path_segments()[-1]}}') # type: ignore[union-attr]
             self.assertEqual(self.dut.{{'.'.join(get_python_path_segments(node))}}.full_inst_name, '{{'.'.join(node.get_path_segments())}}')  # type: ignore[union-attr]
         {% endfor %}
+
+    def test_multidimensional_array_accessing(self)  -> None:
+        """
+        Walk the address map and check that any array with more than 1 dimension can be accessed
+        with the alternative name, this test checks the instance name in order to confirm
+        the access worked
+        """
+        {% for node in owned_elements.n_dimesional_array_nodes -%}
+        with self.subTest(msg='node: {{'.'.join(node.get_path_segments())}}'):
+            self.assertEqual(self.dut.{{'.'.join(get_python_path_segments(node, False))}}.inst_name, '{{node.get_path_segments()[-1]}}') # type: ignore[union-attr]
+        {% endfor %}
+
 
     def test_register_properties(self)  -> None:
         """
