--- a/src/peakrdl_python/templates/addrmap_memory.py.jinja
+++ b/src/peakrdl_python/templates/addrmap_memory.py.jinja
@@ -95,7 +95,7 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Memory{% if asyncoutput 
                  callbacks: {% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %}
                  address: int,
                  stride: int,
-                 dimensions: List[int]):
+                 dimensions: Tuple[int, ...]):
 
         super().__init__(logger_handle=logger_handle, inst_name=inst_name,
                          parent=parent, callbacks=callbacks, address=address,
@@ -104,10 +104,6 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(Memory{% if asyncoutput 
     @property
     def _element_datatype(self) -> Type[Node]:
         return {{get_fully_qualified_type_name(node)}}_cls
-
-    def __getitem__(self, item:Union[int, slice]) -> Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]]:
-        # this cast is OK because an explict typing check was done in the __init__
-        return cast(Union[{{get_fully_qualified_type_name(node)}}_cls, Tuple[{{get_fully_qualified_type_name(node)}}_cls, ...]], super().__getitem__(item))
     {%- endif %}
 
 {%- endmacro %}
