--- a/src/peakrdl_python/templates/addrmap.py.jinja
+++ b/src/peakrdl_python/templates/addrmap.py.jinja
@@ -194,10 +194,11 @@ class {{get_fully_qualified_type_name(node)}}_array_cls(RegFileArray):
                  callbacks: {% if asyncoutput %}AsyncCallbackSet{% else %}NormalCallbackSet{% endif %},
                  address: int,
                  stride: int,
-                 dimensions: Tuple[int]):
+                 dimensions: Tuple[int, ...]):
 
         super().__init__(logger_handle=logger_handle, inst_name=inst_name,
-                         parent=parent, elements=elements)
+                         parent=parent, callbacks=callbacks, address=address,
+                         stride=stride, dimensions=dimensions)
 
     @property
     def _element_datatype(self) -> Type[Node]:
